# objection

./: Cargo.toml  README.md  config.basic.toml  config.example.toml
data/: database.sqlite3
migrations/instance/: 20251103031646_create_initial_tables.up.sql
src/: config.rs  lib.rs  main.rs
src/models/: bucket.rs  mod.rs  object.rs
src/routes/: fs.rs  mod.rs
src/routes/api/: buckets.rs  mod.rs
tests/: list_buckets.rs
