[package]
name = "objection"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Wowk <dev@adrianwowk.com>"]

[dependencies]
axum = { version = "0.7.7", features = [
    "json",
    "macros",
    "multipart",
    "query",
    "tower-log",
    "tracing",
] }
axum_typed_multipart = "0.11.1"
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
chrono = { version = "0.4.35", features = ["serde"] }
futures = "0.3.30"
governor = "0.6.3"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.115"
sha256 = "1.5.0"
sqlite = "0.36.1"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tower_governor = "0.4.2"
tower-http = { version = "0.5.2", features = [
    "cors",
    "trace",
    "normalize-path",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
mime = "0.3.17"
strum = { version = "0.26.3", features = ["derive"] }
indoc = "2.0.5"
toml = "0.8.19"
cidr = "0.3.0"
clap = { version = "4.5.20", features = ["derive"] }
