[package]
name = "objection"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = [
  "json",
  "macros",
  "multipart",
  "query",
  "tower-log",
  "tracing",
] }
axum-extra = { version = "0.12.1", features = ["cookie", "typed-header"] }
axum_typed_multipart = "0.16.4"
chrono = { version = "0.4.35", features = ["serde"] }
cidr = "0.3.0"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.30"
governor = "0.10.1"
indoc = "2.0.5"
mime = "0.3.17"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.115"
sha256 = "1.5.0"
sqlx = { version = "0.8", features = [
  "chrono",
  "json",
  "macros",
  "runtime-tokio",
  "sqlite",
  "uuid"
] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.9.8"
tower_governor = "0.8.0"
tower-http = { version = "0.6.6", features = [
  "cors",
  "normalize-path",
  "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dev-dependencies]
rust-s3 = "0.37.0"
tempdir = "0.3.7"
tokio-test = "0.4.4"
tokio-util = { version = "0.7.17", features = ["rt"] }
